# llvm-compiler

./: .gitignore  README.md  STATUS.md  build.sh  llm-rules.md  rules.md
compiler/: Cargo.toml
compiler/src/: lib.rs  main.rs
compiler/src/backend/: codegen.rs  hir.rs  mod.rs
compiler/src/cli/: mod.rs
compiler/src/frontend/: ast.rs  lexer.rs  mod.rs  parser.rs  sema.rs
examples/: factorial.vks  hello.vks
ocaml_implemented_frontend/: README.md  ast.ml  dune  dune-project  hir.ml  hir_gen.ml  lexer.mll  main.ml  parser.mly  type_checker.ml  vks_frontend.opam
std/: Math.vks  Prelude.vks
std/Math/: Hypr.vks  Trig.vks
