[package]
name = "vks"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
logos = "0.14"
chumsky = "0.9"
clap = { version = "4.5", features = ["derive"] }

[lib]
name = "vks_compiler"
path = "src/lib.rs"

[[bin]]
name = "vks"
path = "src/main.rs"
    
